--- a/index.html
+++ b/index.html
@@ -30,6 +30,27 @@
 
     </header>
 
+    <h2 id="categorias">Categorias</h2>
+
+    <section class="produtos">
+        <div class="img-categorias">
+            <img src="img/vasodeplanta.jpg">
+            <p>Plantas Ornamentais</p>
+        </div>
+        <div class="img-categorias">
+            <img src="img/vasodeplanta.jpg">
+            <p>Adubos</p>
+        </div>
+        <div class="img-categorias">
+            <img src="img/vasodeplanta.jpg">
+            <p>Acessórios</p>
+        </div>
+        <div class="img-categorias">
+            <img src="img/vasodeplanta.jpg">
+            <p>Vasos</p>
+        </div>
+    </section>
+
     <script src="menu.js"></script>        
 
     <div id="contato">
