--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     </video>
 </div>
 <header id="header">
-    <!-- <div class="conteudo">
-        <div class="flex"> -->
+   
     <div class="logo">
         <a href="index.html"><img src="img/plantslogo.png" class="img"></a>
     </div>
@@ -26,7 +25,6 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="loja.html">Loja</a></li>
-            <li><a href="artigo.html">Artigos</a></li>
             <li><a href="#contato">Contato</a></li>
         </ul>
     </nav>
@@ -57,7 +55,7 @@
     <a href="#">
         <div class="img-categorias">
             <img src="img/vasodeplanta.jpg">
-            <p>Plantas Ornamentais</p>
+            <p>Acessórios</p>
         </div>
     </a>
     
