--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-
+<body>
 <div class="bg_video">
     <video autoplay muted loop>
         <source src="video/logovid.mp4" type="video/mp4">
