--- a/loja.html
+++ b/loja.html
@@ -11,8 +11,7 @@
 
 <body>
     <header id="header">
-        <!-- <div class="conteudo">
-            <div class="flex"> -->
+
                 <a href="index.html"><img src="img/plantslogo.png" class="img"></a>
                 <nav>
                     <ul>
@@ -29,41 +28,25 @@
             <img src="img/vasodeplanta.jpg">
             <p>Nome img</p>
             <p>Preço R$</p>
+            <a id="botao" href="#">Comprar</a>
         </div>
         <div class="img-produtos">
             <img src="img/vasodeplanta.jpg">
             <p>Nome img</p>
             <p>Preço R$</p>
+            <a id="botao" href="#">Comprar</a>
         </div>
         <div class="img-produtos">
             <img src="img/vasodeplanta.jpg">
             <p>Nome img</p>
             <p>Preço R$</p>
+            <a id="botao" href="#">Comprar</a>
         </div>
         <div class="img-produtos">
             <img src="img/vasodeplanta.jpg">
             <p>Nome img</p>
             <p>Preço R$</p>
-        </div>
-        <div class="img-produtos">
-            <img src="img/vasodeplanta.jpg">
-            <p>Nome img</p>
-            <p>Preço R$</p>
-        </div>
-        <div class="img-produtos">
-            <img src="img/vasodeplanta.jpg">
-            <p>Nome img</p>
-            <p>Preço R$</p>
-        </div>
-        <div class="img-produtos">
-            <img src="img/vasodeplanta.jpg">
-            <p>Nome img</p>
-            <p>Preço R$</p>
-        </div>
-        <div class="img-produtos">
-            <img src="img/vasodeplanta.jpg">
-            <p>Nome img</p>
-            <p>Preço R$</p>
+            <a id="botao" href="#">Comprar</a>
         </div>
 
     </section>
