--- a/index.html
+++ b/index.html
@@ -10,83 +10,84 @@
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-<div class="bg_video">
-    <video autoplay muted loop>
-        <source src="video/logovid.mp4" type="video/mp4">
-    </video>
-</div>
-<header id="header">
-   
-    <div class="logo">
-        <a href="index.html"><img src="img/plantslogo.png" class="img"></a>
+    <div class="bg_video">
+        <video autoplay muted loop>
+            <source src="video/logovid.mp4" type="video/mp4">
+        </video>
     </div>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="loja.html">Loja</a></li>
-            <li><a href="#contato">Contato</a></li>
-        </ul>
-    </nav>
+    <header id="header">
 
-</header>
-
-<h2 id="categorias">Categorias</h2>
-
-<section class="produtos">
-    <a href="#">
-        <div class="img-categorias">
-            <img src="img/vasodeplanta.jpg">
-            <p>Plantas Ornamentais</p>
+        <div class="logo">
+            <a href="index.html"><img src="img/plantslogo.png" class="img"></a>
         </div>
-    </a>
-    <a href="#">
-        <div class="img-categorias">
-            <img src="img/vasodeplanta.jpg">
-            <p>Vasos</p>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="loja.html">Loja</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
+        </nav>
+
+    </header>
+
+    <h2 id="categorias">Categorias</h2>
+
+    <section class="produtos">
+        <a href="loja/plantasornamentais.html">
+            <div class="img-categorias">
+                <img src="img/vasodeplanta.jpg">
+                <p>Plantas Ornamentais</p>
+            </div>
+        </a>
+        <a href="#">
+            <div class="img-categorias">
+                <img src="img/vasodeplanta.jpg">
+                <p>Vasos</p>
+            </div>
+        </a>
+        <a href="#">
+            <div class="img-categorias">
+                <img src="img/vasodeplanta.jpg">
+                <p>Adubo</p>
+            </div>
+        </a>
+        <a href="#">
+            <div class="img-categorias">
+                <img src="img/vasodeplanta.jpg">
+                <p>Acessórios</p>
+            </div>
+        </a>
+
+
+    </section>
+
+    <script src="menu.js"></script>
+
+    <div id="contato">
+        <div class="atendimento">
+            <h3>Atendimento</h3>
+            <a href=""><i class="fa-solid fa-phone"></i> (xx) xxxxx-xxxx</a>
+            <a href=""><i class="fa-brands fa-whatsapp"></i> (xx) xxxxx-xxxx</a>
+            <a href=""><i class="fa-solid fa-envelope"></i> xxxx@gmail.com</a>
+            <a href=""><i class="fa-solid fa-clock"></i> horário</a>
+
+
+
+
         </div>
-    </a>
-    <a href="#">
-        <div class="img-categorias">
-            <img src="img/vasodeplanta.jpg">
-            <p>Adubo</p>
+        <div class="redesociais">
+            <h3>Rede sociais</h3>
+            <a href=""><i class="fa-brands fa-facebook"></i> Facebook</a>
+            <a href=""><i class="fa-brands fa-instagram"></i> Instagram</a>
+            <a href=""><i class="fa-brands fa-youtube"></i> Youtube</a>
         </div>
-    </a>
-    <a href="#">
-        <div class="img-categorias">
-            <img src="img/vasodeplanta.jpg">
-            <p>Acessórios</p>
-        </div>
-    </a>
-    
-
-</section>
-
-<script src="menu.js"></script>
-
-<div id="contato">
-    <div class="atendimento">
-        <h3>Atendimento</h3>
-        <a href=""><i class="fa-solid fa-phone"></i> (xx) xxxxx-xxxx</a>
-        <a href=""><i class="fa-brands fa-whatsapp"></i> (xx) xxxxx-xxxx</a>
-        <a href=""><i class="fa-solid fa-envelope"></i> xxxx@gmail.com</a>
-        <a href=""><i class="fa-solid fa-clock"></i> horário</a>
-
-
-
-
     </div>
-    <div class="redesociais">
-        <h3>Rede sociais</h3>
-        <a href=""><i class="fa-brands fa-facebook"></i> Facebook</a>
-        <a href=""><i class="fa-brands fa-instagram"></i> Instagram</a>
-        <a href=""><i class="fa-brands fa-youtube"></i> Youtube</a>
-    </div>
-</div>
 
-<div class="wats">
-    <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-</div>
+    <div class="wats">
+        <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+    </div>
 
 </body>
 
