--- a/loja/plantasornamentais.html
+++ b/loja/plantasornamentais.html
@@ -10,14 +10,35 @@
     <header id="header">
        
         <div class="logo">
-            <a href="index.html"><img src="img/plantslogo.png" class="img"></a>
+            <a href="../index.html"><img src="../img/plantslogo.png" class="img"></a>
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="loja.html">Loja</a></li>
-                <li><a href="#contato">Contato</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../loja.html">Loja</a></li>
+                <li><a href="../#contato">Contato</a></li>
             </ul>
         </nav>
+    </header>
+    <h2>Plantas Ornamentais</h2>
+    <section class="produtos">
+        <div class="img-produtos">
+            <img src="../img/samambaia.webp">
+            <p>Samambaia</p>
+        </div>
+        <div class="img-produtos">
+            <img src="../img/jabuticabeira.jpg">
+            <p>Jabuticabeira</p>
+        </div>
+        <div class="img-produtos">
+            <img src="../img/Aspargo.webp">
+            <p>Aspargo</p>
+        </div>
+        <div class="img-produtos">
+            <img src="../img/Espada de Sao Jorge.webp">
+            <p>Espada de Sao Jorge</p>
+        </div>
+        
+
 </body>
 </html>
