--- a/wats.html
+++ b/wats.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loja</title>
+    <title>whatsapp</title>
     <link rel="stylesheet" href="estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
@@ -12,9 +12,15 @@
 </head>
 
 <body>
+
+
+    <script src="menu.js"></script>
+
     <header id="header">
 
-        <a href="index.html"><img src="img/plantslogo.png" class="img"></a>
+        <div class="logo">
+            <a href="index.html"><img src="img/plantslogo.png" class="img"></a>
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -22,38 +28,15 @@
                 <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
+
     </header>
-    <h2>Plantas Ornamentais</h2>
 
-    <section class="produtos">
-        <div class="img-produtos">
-            <img src="img/Aspargo.webp">
-            <p>Aspargo</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Comprar</a>
-        </div>
-        <div class="img-produtos">
-            <img src="img/Espada de Sao Jorge.webp">
-            <p>Espada de São Jorge</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Comprar</a>
-        </div>
-        <div class="img-produtos">
-            <img src="img/jabuticabeira.jpg">
-            <p>Jabuticabeira</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Comprar</a>
-        </div>
-        <div class="img-produtos">
-            <img src="img/samambaia.webp">
-            <p>Samambaia</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Comprar</a>
-        </div>
+    <div class="recado">
+        <p>Clique no botão abaixo<br>para ser redirecionado ao nosso Whatsapp empresarial<br>e prosseguir com sua compra
+        </p>
+        <a href="#">Clique aqui</a>
+    </div>
 
-    </section>
-
-    <script src="menu.js"></script>
     <div id="contato">
         <div class="atendimento">
             <h3>Atendimento</h3>
@@ -80,6 +63,7 @@
     <div class="wats">
         <a href="wats.html"><i class="fa-brands fa-whatsapp"></i></a>
     </div>
+
 
 
 
