comit pc eduardo

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
                 <p>Plantas Ornamentais</p>
             </div>
         </a>
-        <a href="#">
+        <a href="loja/vasos.html">
             <div class="img-categorias">
                 <img src="img/vasodeplanta.jpg">
                 <p>Vasos</p>
             </div>
         </a>
-        <a href="#">
+        <a href="loja/adubo.html">
             <div class="img-categorias">
                 <img src="img/vasodeplanta.jpg">
                 <p>Adubo</p>
