--- a/loja/adubo.html
+++ b/loja/adubo.html
@@ -21,24 +21,24 @@
             </ul>
         </nav>
     </header>
-    <h2>Plantas Ornamentais</h2>
+    <h2>Adubos</h2>
 
     <section class="produtos">
         <div class="img-produtos">
-            <img src="../img/samambaia.webp">
-            <p>Samambaia</p>
+            <img src="../img/adubodegalinha.webp">
+            <p>Esterco de galinha</p>
         </div>
         <div class="img-produtos">
-            <img src="../img/jabuticabeira.jpg">
-            <p>Jabuticabeira</p>
+            <img src="../img/adubopoly-feed.webp">
+            <p>Adubo quimico</p>
         </div>
         <div class="img-produtos">
-            <img src="../img/Aspargo.webp">
-            <p>Aspargo</p>
+            <img src="../img/adubobovino.webp">
+            <p>Esterco bovino</p>
         </div>
         <div class="img-produtos">
-            <img src="../img/Espada de Sao Jorge.webp">
-            <p>Espada de Sao Jorge</p>
+            <img src="../img/humosdeminhoca.webp">
+            <p>Humos de minhoca</p>
         </div>
     </section>
 
