--- a/loja/vasos.html
+++ b/loja/vasos.html
@@ -21,24 +21,24 @@
             </ul>
         </nav>
     </header>
-    <h2>Plantas Ornamentais</h2>
+    <h2>Vasos</h2>
 
     <section class="produtos">
         <div class="img-produtos">
-            <img src="../img/samambaia.webp">
-            <p>Samambaia</p>
+            <img src="../img/vasos ceramico.webp">
+            <p>Vaso ceramico</p>
         </div>
         <div class="img-produtos">
-            <img src="../img/jabuticabeira.jpg">
-            <p>Jabuticabeira</p>
+            <img src="../img/bacia.webp">
+            <p>Vaso bacia</p>
         </div>
         <div class="img-produtos">
-            <img src="../img/Aspargo.webp">
-            <p>Aspargo</p>
+            <img src="../img/vasomarmorizado.webp">
+            <p>Vasomarmorizado</p>
         </div>
         <div class="img-produtos">
-            <img src="../img/Espada de Sao Jorge.webp">
-            <p>Espada de Sao Jorge</p>
+            <img src="../img/vasotreccia.webp">
+            <p>Vaso tressia</p>
         </div>
     </section>
 
