update loja e home

--- a/loja.html
+++ b/loja.html
@@ -52,6 +52,63 @@
         </div>
 
     </section>
+    <h3>Vasos</h3>
+    <section class="produtos">
+        <div class="img-produtos">
+            <img src="../img/vasos ceramico.webp">
+            <p>Vaso ceramico</p>
+            <p>Preço R$</p>
+            <a id="botao" href="wats.html">Comprar</a>
+        </div>
+        <div class="img-produtos">
+            <img src="../img/bacia.webp">
+            <p>Vaso bacia</p>
+            <p>Preço R$</p>
+            <a id="botao" href="wats.html">Comprar</a>
+        </div>
+        <div class="img-produtos">
+            <img src="../img/vasomarmorizado.webp">
+            <p>Vasomarmorizado</p>
+            <p>Preço R$</p>
+            <a id="botao" href="wats.html">Comprar</a>
+        </div>
+        <div class="img-produtos">
+            <img src="../img/vasotreccia.webp">
+            <p>Vaso tressia</p>
+            <p>Preço R$</p>
+            <a id="botao" href="wats.html">Comprar</a>
+        </div>
+    </section>
+    <h3>Adubo</h3>
+    <section class="produtos">
+        <div class="img-produtos">
+            <img src="../img/adubodegalinha.webp">
+            <p>Esterco de galinha</p>
+            <p>Preço R$</p>
+            <a id="botao" href="wats.html">Comprar</a>
+        </div>
+        <div class="img-produtos">
+            <img src="../img/adubopoly-feed.webp">
+            <p>Adubo quimico</p>
+            <p>Preço R$</p>
+            <a id="botao" href="wats.html">Comprar</a>
+        </div>
+        <div class="img-produtos">
+            <img src="../img/adubobovino.webp">
+            <p>Esterco bovino</p>
+            <p>Preço R$</p>
+            <a id="botao" href="wats.html">Comprar</a>
+        </div>
+        <div class="img-produtos">
+            <img src="../img/humosdeminhoca.webp">
+            <p>Humos de minhoca</p>
+            <p>Preço R$</p>
+            <a id="botao" href="wats.html">Comprar</a>
+        </div>
+    </section>
+
+
+
 
     <script src="menu.js"></script>
     <div id="contato">
