--- a/index.html
+++ b/index.html
@@ -14,53 +14,6 @@
 
 <body>
 
-
-    <body>
-        <div class="bg_video">
-            <video autoplay muted loop>
-                <source src="video/logovid.mp4" type="video/mp4">
-            </video>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="loja.html">Loja</a></li>
-                <li><a href="#contato">Contato</a></li>
-            </ul>
-        </nav>
-
-    </header>
-
-    <h2 id="categorias">Categorias</h2>
-
-    <section class="produtos">
-        <a href="loja/plantasornamentais.html">
-            <div class="img-categorias">
-                <img src="img/vasodeplanta.jpg">
-                <p>Plantas Ornamentais</p>
-            </div>
-        </a>
-        <a href="loja/vasos.html">
-            <div class="img-categorias">
-                <img src="img/vasodeplanta.jpg">
-                <p>Vasos</p>
-            </div>
-        </a>
-        <a href="loja/adubo.html">
-            <div class="img-categorias">
-                <img src="img/vasodeplanta.jpg">
-                <p>Adubo</p>
-            </div>
-        </a>
-        <a href="#">
-            <div class="img-categorias">
-                <img src="img/vasodeplanta.jpg">
-                <p>Acessórios</p>
-            </div>
-        </a>
-
-
-    </section>
         <header id="header">
 
             <div class="logo">
@@ -76,7 +29,7 @@
 
         </header>
 
-        <h2 id="categorias">Categorias</h2>
+        <h2>Categorias</h2>
 
         <section class="produtos">
             <a href="loja/plantasornamentais.html">
@@ -85,19 +38,19 @@
                     <p>Plantas Ornamentais</p>
                 </div>
             </a>
-            <a href="#">
+            <a href="loja/vasos.html">
                 <div class="img-categorias">
                     <img src="img/vasodeplanta.jpg">
                     <p>Vasos</p>
                 </div>
             </a>
-            <a href="#">
+            <a href="loja/adubo.html">
                 <div class="img-categorias">
                     <img src="img/vasodeplanta.jpg">
                     <p>Adubo</p>
                 </div>
             </a>
-            <a href="#">
+            <a href="loja/acessorios.html">
                 <div class="img-categorias">
                     <img src="img/vasodeplanta.jpg">
                     <p>Acessórios</p>
