--- a/loja/acessorios.html
+++ b/loja/acessorios.html
@@ -25,20 +25,28 @@
 
     <section class="produtos">
         <div class="img-produtos">
-            <img src="../img/a.webp">
+            <img src="../img/adubodegalinha.webp">
             <p>Esterco de galinha</p>
+            <p>Preço R$</p>
+            <a id="botao" href="wats.html">Comprar</a>
         </div>
         <div class="img-produtos">
             <img src="../img/adubopoly-feed.webp">
             <p>Adubo quimico</p>
+            <p>Preço R$</p>
+            <a id="botao" href="wats.html">Comprar</a>
         </div>
         <div class="img-produtos">
             <img src="../img/adubobovino.webp">
             <p>Esterco bovino</p>
+            <p>Preço R$</p>
+            <a id="botao" href="wats.html">Comprar</a>
         </div>
         <div class="img-produtos">
             <img src="../img/humosdeminhoca.webp">
             <p>Humos de minhoca</p>
+            <p>Preço R$</p>
+            <a id="botao" href="wats.html">Comprar</a>
         </div>
     </section>
 
