site finalmente finalizado

--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
 
 
 <body>
-
+    <div class="bg_video">
+        <video autoplay muted loop>
+            <source src="video/logovid.mp4" type="video/mp4">
+        </video>
+    </div>
         <header id="header">
+
+            
 
             <div class="logo">
                 <a href="index.html"><img src="img/plantslogo.png" class="img"></a>
@@ -29,7 +35,7 @@
 
         </header>
 
-        <h2>Categorias</h2>
+        <h2 id="cate">Categorias</h2>
 
         <section class="produtos">
             <a href="loja/plantasornamentais.html">
@@ -40,19 +46,19 @@
             </a>
             <a href="loja/vasos.html">
                 <div class="img-categorias">
-                    <img src="img/vasodeplanta.jpg">
+                    <img src="img/vasos diversos.webp">
                     <p>Vasos</p>
                 </div>
             </a>
             <a href="loja/adubo.html">
                 <div class="img-categorias">
-                    <img src="img/vasodeplanta.jpg">
+                    <img src="img/adubo na mao.jpg">
                     <p>Adubo</p>
                 </div>
             </a>
             <a href="loja/acessorios.html">
                 <div class="img-categorias">
-                    <img src="img/vasodeplanta.jpg">
+                    <img src="img/acesssorios diversos.png">
                     <p>Acessórios</p>
                 </div>
             </a>
@@ -68,7 +74,7 @@
                 <p><i class="fa-solid fa-phone"></i> 11 97080-7642</p>
                 <p><i class="fa-brands fa-whatsapp"></i> 11 97080-7642</p>
                 <p><i class="fa-solid fa-envelope"></i> xxxx@gmail.com</p>
-                <p><i class="fa-solid fa-clock"></i> 9:00hrs : 18:00hrs</p>
+                <p><i class="fa-solid fa-clock"></i> Horário de atendimento: 9:00 às 18:00</p>
 
 
 
