--- a/loja.html
+++ b/loja.html
@@ -107,6 +107,35 @@
         </div>
     </section>
 
+    <h3>Acessórios</h3>
+
+    <section class="produtos">
+        <div class="img-produtos">
+            <img src="../img/luva.webp">
+            <p>Luva</p>
+            <p>Preço R$</p>
+            <a id="botao" href="wats.html">Comprar</a>
+        </div>
+        <div class="img-produtos">
+            <img src="../img/pazinha.webp">
+            <p>Pazinha</p>
+            <p>Preço R$</p>
+            <a id="botao" href="wats.html">Comprar</a>
+        </div>
+        <div class="img-produtos">
+            <img src="../img/porta adubo.webp">
+            <p>Porta adubo</p>
+            <p>Preço R$</p>
+            <a id="botao" href="wats.html">Comprar</a>
+        </div>
+        <div class="img-produtos">
+            <img src="../img/rastelo.webp">
+            <p>Rastelo</p>
+            <p>Preço R$</p>
+            <a id="botao" href="wats.html">Comprar</a>
+        </div>
+    </section>
+
 
 
 
@@ -117,7 +146,7 @@
             <p><i class="fa-solid fa-phone"></i> 11 97080-7642</p>
             <p><i class="fa-brands fa-whatsapp"></i> 11 97080-7642</p>
             <p><i class="fa-solid fa-envelope"></i> xxxx@gmail.com</p>
-            <p><i class="fa-solid fa-clock"></i> 9:00hrs : 18:00hrs</p>
+            <p><i class="fa-solid fa-clock"></i> Horário de atendimento: 9:00 às 18:00</p>
 
 
 
