--- a/wats.html
+++ b/wats.html
@@ -18,6 +18,7 @@
 
     <header id="header">
 
+
         <div class="logo">
             <a href="index.html"><img src="img/plantslogo.png" class="img"></a>
         </div>
@@ -34,7 +35,7 @@
     <div class="recado">
         <p>Clique no botão abaixo<br>para ser redirecionado ao nosso Whatsapp empresarial<br>e prosseguir com sua compra
         </p>
-        <a href="#">Clique aqui</a>
+        <a href="http://wa.me/5511970807642">Clique aqui</a>
     </div>
 
     <div id="contato">
@@ -43,7 +44,7 @@
             <p><i class="fa-solid fa-phone"></i> 11 97080-7642</p>
             <p><i class="fa-brands fa-whatsapp"></i> 11 97080-7642</p>
             <p><i class="fa-solid fa-envelope"></i> xxxx@gmail.com</p>
-            <p><i class="fa-solid fa-clock"></i> 9:00hrs : 18:00hrs</p>
+            <p><i class="fa-solid fa-clock"></i> Horário de atendimento: 9:00 às 18:00</p>
 
 
 
