--- a/loja/plantasornamentais.html
+++ b/loja/plantasornamentais.html
@@ -28,25 +28,25 @@
             <img src="../img/Aspargo.webp">
             <p>Aspargo</p>
             <p>Preço R$</p>
-            <a id="botao" href="wats.html">Comprar</a>
+            <a id="botao" href="../wats.html">Comprar</a>
         </div>
         <div class="img-produtos">
             <img src="../img/Espada de Sao Jorge.webp">
             <p>Espada de São Jorge</p>
             <p>Preço R$</p>
-            <a id="botao" href="wats.html">Comprar</a>
+            <a id="botao" href="../wats.html">Comprar</a>
         </div>
         <div class="img-produtos">
             <img src="../img/jabuticabeira.jpg">
             <p>Jabuticabeira</p>
             <p>Preço R$</p>
-            <a id="botao" href="wats.html">Comprar</a>
+            <a id="botao" href="../wats.html">Comprar</a>
         </div>
         <div class="img-produtos">
             <img src="../img/samambaia.webp">
             <p>Samambaia</p>
             <p>Preço R$</p>
-            <a id="botao" href="wats.html">Comprar</a>
+            <a id="botao" href="../wats.html">Comprar</a>
         </div>
 
     </section>
@@ -58,7 +58,7 @@
             <p><i class="fa-solid fa-phone"></i> 11 97080-7642</p>
             <p><i class="fa-brands fa-whatsapp"></i> 11 97080-7642</p>
             <p><i class="fa-solid fa-envelope"></i> xxxx@gmail.com</p>
-            <p><i class="fa-solid fa-clock"></i> 9:00hrs : 18:00hrs</p>
+            <p><i class="fa-solid fa-clock"></i> Horário de atendimento: 9:00 às 18:00</p>
 
 
 
