--- a/loja/vasos.html
+++ b/loja/vasos.html
@@ -28,25 +28,25 @@
             <img src="../img/vasos ceramico.webp">
             <p>Vaso ceramico</p>
             <p>Preço R$</p>
-            <a id="botao" href="wats.html">Comprar</a>
+            <a id="botao" href="../wats.html">Comprar</a>
         </div>
         <div class="img-produtos">
             <img src="../img/bacia.webp">
             <p>Vaso bacia</p>
             <p>Preço R$</p>
-            <a id="botao" href="wats.html">Comprar</a>
+            <a id="botao" href="../wats.html">Comprar</a>
         </div>
         <div class="img-produtos">
             <img src="../img/vasomarmorizado.webp">
             <p>Vasomarmorizado</p>
             <p>Preço R$</p>
-            <a id="botao" href="wats.html">Comprar</a>
+            <a id="botao" href="../wats.html">Comprar</a>
         </div>
         <div class="img-produtos">
             <img src="../img/vasotreccia.webp">
             <p>Vaso tressia</p>
             <p>Preço R$</p>
-            <a id="botao" href="wats.html">Comprar</a>
+            <a id="botao" href="../wats.html">Comprar</a>
         </div>
     </section>
 
@@ -57,7 +57,7 @@
             <p><i class="fa-solid fa-phone"></i> 11 97080-7642</p>
             <p><i class="fa-brands fa-whatsapp"></i> 11 97080-7642</p>
             <p><i class="fa-solid fa-envelope"></i> xxxx@gmail.com</p>
-            <p><i class="fa-solid fa-clock"></i> 9:00hrs : 18:00hrs</p>
+            <p><i class="fa-solid fa-clock"></i> Horário de atendimento: 9:00 às 18:00</p>
 
 
 
