tirei ponto, ponto, barra

--- a/loja.html
+++ b/loja.html
@@ -55,25 +55,25 @@
     <h3>Vasos</h3>
     <section class="produtos">
         <div class="img-produtos">
-            <img src="../img/vasos ceramico.webp">
+            <img src="img/vasos ceramico.webp">
             <p>Vaso ceramico</p>
             <p>Preço R$</p>
             <a id="botao" href="wats.html">Comprar</a>
         </div>
         <div class="img-produtos">
-            <img src="../img/bacia.webp">
+            <img src="img/bacia.webp">
             <p>Vaso bacia</p>
             <p>Preço R$</p>
             <a id="botao" href="wats.html">Comprar</a>
         </div>
         <div class="img-produtos">
-            <img src="../img/vasomarmorizado.webp">
+            <img src="img/vasomarmorizado.webp">
             <p>Vasomarmorizado</p>
             <p>Preço R$</p>
             <a id="botao" href="wats.html">Comprar</a>
         </div>
         <div class="img-produtos">
-            <img src="../img/vasotreccia.webp">
+            <img src="img/vasotreccia.webp">
             <p>Vaso tressia</p>
             <p>Preço R$</p>
             <a id="botao" href="wats.html">Comprar</a>
@@ -82,25 +82,25 @@
     <h3>Adubo</h3>
     <section class="produtos">
         <div class="img-produtos">
-            <img src="../img/adubodegalinha.webp">
+            <img src="img/adubodegalinha.webp">
             <p>Esterco de galinha</p>
             <p>Preço R$</p>
             <a id="botao" href="wats.html">Comprar</a>
         </div>
         <div class="img-produtos">
-            <img src="../img/adubopoly-feed.webp">
+            <img src="img/adubopoly-feed.webp">
             <p>Adubo quimico</p>
             <p>Preço R$</p>
             <a id="botao" href="wats.html">Comprar</a>
         </div>
         <div class="img-produtos">
-            <img src="../img/adubobovino.webp">
+            <img src="img/adubobovino.webp">
             <p>Esterco bovino</p>
             <p>Preço R$</p>
             <a id="botao" href="wats.html">Comprar</a>
         </div>
         <div class="img-produtos">
-            <img src="../img/humosdeminhoca.webp">
+            <img src="img/humosdeminhoca.webp">
             <p>Humos de minhoca</p>
             <p>Preço R$</p>
             <a id="botao" href="wats.html">Comprar</a>
@@ -111,25 +111,25 @@
 
     <section class="produtos">
         <div class="img-produtos">
-            <img src="../img/luva.webp">
+            <img src="img/luva.webp">
             <p>Luva</p>
             <p>Preço R$</p>
             <a id="botao" href="wats.html">Comprar</a>
         </div>
         <div class="img-produtos">
-            <img src="../img/pazinha.webp">
+            <img src="img/pazinha.webp">
             <p>Pazinha</p>
             <p>Preço R$</p>
             <a id="botao" href="wats.html">Comprar</a>
         </div>
         <div class="img-produtos">
-            <img src="../img/porta adubo.webp">
+            <img src="img/porta adubo.webp">
             <p>Porta adubo</p>
             <p>Preço R$</p>
             <a id="botao" href="wats.html">Comprar</a>
         </div>
         <div class="img-produtos">
-            <img src="../img/rastelo.webp">
+            <img src="img/rastelo.webp">
             <p>Rastelo</p>
             <p>Preço R$</p>
             <a id="botao" href="wats.html">Comprar</a>
