--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <script src="menu.js" defer></script>
+
 </head>
 
 
@@ -32,6 +34,10 @@
                     <li><a href="#contato">Contato</a></li>
                 </ul>
             </nav>
+            <!-- JOÃO -->
+            <div class="btn-abrir-menu" id="btn-menu">
+                <i class="fa-solid fa-list"></i>
+            </div>
 
         </header>
 
@@ -66,7 +72,6 @@
 
         </section>
 
-        <script src="menu.js"></script>
 
         <div id="contato">
             <div class="atendimento">
@@ -82,11 +87,11 @@
             <div class="redesociais">
                 <h3>Rede sociais</h3>
                 <a href="https://www.facebook.com/profile.php?id=100089811708008&mibextid=ZbWKwL"><i
-                        class="fa-brands fa-facebook"></i> Facebook</a>
+                        class="fa-brands fa-facebook"></i> <p>Facebook</p></a>
                 <a href="https://www.instagram.com/plantasnalaje41?igsh=MTJvbWJwZzAyNGxicA=="><i
-                        class="fa-brands fa-instagram"></i> Instagram</a>
+                        class="fa-brands fa-instagram"></i> <p>Instagram</p></a>
                 <a href="https://youtube.com/@Plantasnalaje?si=JXxdOP2qqWGEd1bL"><i class="fa-brands fa-youtube"></i>
-                    Youtube</a>
+                    <p>Youtube</p></a>
             </div>
 
 
@@ -96,6 +101,20 @@
             <a href="wats.html"><i class="fa-brands fa-whatsapp"></i></a>
         </div>
 
+        <div class="menu-mobile" id="menu-mobile">
+            <div class="btn-fechar">
+                <i class="fa-regular fa-circle-xmark"></i>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="loja.html">Loja</a></li>
+                    <li><a href="#contato">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
+
+        <div class="overlay-menu" id="overlay-menu"></div>
     </body>
 
 </html>
