--- a/loja.html
+++ b/loja.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <script src="menu.js" defer></script>
+    <script src="menu.js" defer></script>
 
 </head>
 
@@ -34,26 +34,26 @@
         <div class="img-produtos">
             <img src="img/Aspargo.webp">
             <p>Aspargo</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Comprar</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="img/Espada de Sao Jorge.webp">
             <p>Espada de São Jorge</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Comprar</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="img/jabuticabeira.jpg">
             <p>Jabuticabeira</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Comprar</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="img/samambaia.webp">
             <p>Samambaia</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Comprar</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
 
     </section>
@@ -62,26 +62,26 @@
         <div class="img-produtos">
             <img src="img/vasos ceramico.webp">
             <p>Vaso ceramico</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Comprar</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="img/bacia.webp">
             <p>Vaso bacia</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Comprar</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="img/vasomarmorizado.webp">
             <p>Vasomarmorizado</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Comprar</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="img/vasotreccia.webp">
             <p>Vaso tressia</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Comprar</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
     </section>
     <h3>Adubo</h3>
@@ -89,26 +89,26 @@
         <div class="img-produtos">
             <img src="img/adubodegalinha.webp">
             <p>Esterco de galinha</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Comprar</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="img/adubopoly-feed.webp">
             <p>Adubo quimico</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Comprar</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="img/adubobovino.webp">
             <p>Esterco bovino</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Comprar</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="img/humosdeminhoca.webp">
             <p>Humos de minhoca</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Comprar</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
     </section>
 
@@ -118,26 +118,26 @@
         <div class="img-produtos">
             <img src="img/luva.webp">
             <p>Luva</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Comprar</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="img/pazinha.webp">
             <p>Pazinha</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Comprar</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="img/porta adubo.webp">
             <p>Porta adubo</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Comprar</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="img/rastelo.webp">
             <p>Rastelo</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Comprar</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
     </section>
 
@@ -158,11 +158,16 @@
         <div class="redesociais">
             <h3>Rede sociais</h3>
             <a href="https://www.facebook.com/profile.php?id=100089811708008&mibextid=ZbWKwL"><i
-                    class="fa-brands fa-facebook"></i> <p>Facebook</p></a>
+                    class="fa-brands fa-facebook"></i>
+                <p>Facebook</p>
+            </a>
             <a href="https://www.instagram.com/plantasnalaje41?igsh=MTJvbWJwZzAyNGxicA=="><i
-                    class="fa-brands fa-instagram"></i> <p>Instagram</p></a>
+                    class="fa-brands fa-instagram"></i>
+                <p>Instagram</p>
+            </a>
             <a href="https://youtube.com/@Plantasnalaje?si=JXxdOP2qqWGEd1bL"><i class="fa-brands fa-youtube"></i>
-                <p>Youtube</p></a>
+                <p>Youtube</p>
+            </a>
         </div>
 
     </div>
