--- a/loja/vasos.html
+++ b/loja/vasos.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../estilo.css">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="../menu.js" defer></script>
 
 </head>
+
 <body>
     <header id="header">
-       
+
         <div class="logo">
             <a href="../index.html"><img src="../img/plantslogo.png" class="img"></a>
         </div>
@@ -32,26 +36,26 @@
         <div class="img-produtos">
             <img src="../img/vasos ceramico.webp">
             <p>Vaso ceramico</p>
-            <p>Preço R$</p>
-            <a id="botao" href="../wats.html">Comprar</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="../wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="../img/bacia.webp">
             <p>Vaso bacia</p>
-            <p>Preço R$</p>
-            <a id="botao" href="../wats.html">Comprar</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="../wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="../img/vasomarmorizado.webp">
             <p>Vasomarmorizado</p>
-            <p>Preço R$</p>
-            <a id="botao" href="../wats.html">Comprar</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="../wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="../img/vasotreccia.webp">
             <p>Vaso tressia</p>
-            <p>Preço R$</p>
-            <a id="botao" href="../wats.html">Comprar</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="../wats.html">Saiba mais</a>
         </div>
     </section>
 
@@ -69,11 +73,16 @@
         <div class="redesociais">
             <h3>Rede sociais</h3>
             <a href="https://www.facebook.com/profile.php?id=100089811708008&mibextid=ZbWKwL"><i
-                    class="fa-brands fa-facebook"></i> <p>Facebook</p></a>
+                    class="fa-brands fa-facebook"></i>
+                <p>Facebook</p>
+            </a>
             <a href="https://www.instagram.com/plantasnalaje41?igsh=MTJvbWJwZzAyNGxicA=="><i
-                    class="fa-brands fa-instagram"></i> <p>Instagram</p></a>
+                    class="fa-brands fa-instagram"></i>
+                <p>Instagram</p>
+            </a>
             <a href="https://youtube.com/@Plantasnalaje?si=JXxdOP2qqWGEd1bL"><i class="fa-brands fa-youtube"></i>
-                <p>Youtube</p></a>
+                <p>Youtube</p>
+            </a>
         </div>
 
 
@@ -98,4 +107,5 @@
 
     <div class="overlay-menu" id="overlay-menu"></div>
 </body>
+
 </html>
