--- a/wats.html
+++ b/wats.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <script src="menu.js" defer></script>
+    <script src="menu.js" defer></script>
 
 </head>
 
@@ -56,11 +56,16 @@
         <div class="redesociais">
             <h3>Rede sociais</h3>
             <a href="https://www.facebook.com/profile.php?id=100089811708008&mibextid=ZbWKwL"><i
-                    class="fa-brands fa-facebook"></i> <p>Facebook</p></a>
+                    class="fa-brands fa-facebook"></i>
+                <p>Facebook</p>
+            </a>
             <a href="https://www.instagram.com/plantasnalaje41?igsh=MTJvbWJwZzAyNGxicA=="><i
-                    class="fa-brands fa-instagram"></i> <p>Instagram</p></a>
+                    class="fa-brands fa-instagram"></i>
+                <p>Instagram</p>
+            </a>
             <a href="https://youtube.com/@Plantasnalaje?si=JXxdOP2qqWGEd1bL"><i class="fa-brands fa-youtube"></i>
-                <p>Youtube</p></a>
+                <p>Youtube</p>
+            </a>
         </div>
 
     </div>
