update acesso wats
concertei o acesso a pagina wats pelas páginas da loja, a arrumei h3 do atendimento que estava desalinhado, excluí o seletor artigos da página css ja que não estava sendo utilizado

--- a/loja/plantasornamentais.html
+++ b/loja/plantasornamentais.html
@@ -90,7 +90,7 @@
     </div>
 
     <div class="wats">
-        <a href="wats.html"><i class="fa-brands fa-whatsapp"></i></a>
+        <a href="../wats.html"><i class="fa-brands fa-whatsapp"></i></a>
     </div>
     <div class="menu-mobile" id="menu-mobile">
         <div class="btn-fechar">
