--- a/loja/acessorios.html
+++ b/loja/acessorios.html
@@ -89,7 +89,7 @@
     </div>
 
     <div class="wats">
-        <a href="wats.html"><i class="fa-brands fa-whatsapp"></i></a>
+        <a href="../wats.html"><i class="fa-brands fa-whatsapp"></i></a>
     </div>
 
     <div class="menu-mobile" id="menu-mobile">
