comentei o e-mail no código

--- a/loja/plantasornamentais.html
+++ b/loja/plantasornamentais.html
@@ -65,7 +65,7 @@
             <h3>Atendimento</h3>
             <p><i class="fa-solid fa-phone"></i> 11 97080-7642</p>
             <p><i class="fa-brands fa-whatsapp"></i> 11 97080-7642</p>
-            <p><i class="fa-solid fa-envelope"></i> xxxx@gmail.com</p>
+            <!-- <p><i class="fa-solid fa-envelope"></i> xxxx@gmail.com</p> -->
             <p><i class="fa-solid fa-clock"></i> Horário de atendimento: 9:00 às 18:00</p>
 
 
